fixed thanks to gemini!

--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
     </div>
 
     <script src="suoni.js"></script>
-    <script src="canvas.js"></script>
+    <script src="canvas.js" defer></script>
 </body>
 </html>
 <!-- autore: Paolo Maria Guardiani -->
+<!-- Ho trovato porzioni di codice in giro e mi ha aiutato gemini -->
 <!-- Ho trovato le immagini su Freepik -->
 <!-- ho chiesto aiuto a gemini per alcune parti del codice -->
 
