sound almost done

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         </div>
     </div>
 
+    <script src="howler.min.js"></script>
     <script src="suoni.js"></script>
     <script src="canvas.js" defer></script>
 </body>
